--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   #   url: /talks/    
 
   - title: "Internship"
-    url: /internships/    
+    url: /internship/    
     
   - title: "Portfolio"
     url: /portfolio/
