--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile1.png"
   name             : "Lujie Ma [马鲁杰]"
   pronouns         : # example: "she/her"  
   bio              : "Final year Master of IT student @ University of Melbourne"
