--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,20 @@ main:
   # - title: "Publications"
   #   url: /publications/
 
-  # - title: "Talks"
-  #   url: /talks/    
+  - title: "Talks"
+    url: /talks/    
 
   - title: "Internship"
     url: /internship/    
     
+  # - title: "Projects"
+  #   url: /projects/
+
   - title: "Portfolio"
-    url: /portfolio/
+    url: /Portfolio/
         
-  # - title: "Blog Posts"
-  #   url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
     
   - title: "CV"
     url: /cv/
