--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   # - title: "Publications"
   #   url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
   - title: "Internship"
     url: /internship/    
@@ -12,10 +12,10 @@ main:
   # - title: "Projects"
   #   url: /projects/
 
-  - title: "Portfolio"
-    url: /Portfolio/
+  - title: "Projects"
+    url: /Projects/
         
-  - title: "Blog Posts"
+  - title: "Blogs"
     url: /year-archive/
     
   - title: "CV"
