improve work exp

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Internship"
-    url: /internship/    
+  - title: "Work Experience"
+    url: /Work_Experience/    
     
   # - title: "Projects"
   #   url: /projects/
